<resources>
    <string name="app_name">OP PPOB ZME</string>
    <string name="hipel">Masukan id pelanggan</string>
    <string name="hnohp">Masukan nomor HP</string>
    <string name="cek">Cek</string>
    <string name="back">Kembali</string>
    <string name="bayar">Bayar</string>
    <string name="blth">BLTH</string>
    <string name="kwh">KWH</string>
    <string name="jumlahbayar">Jumlah Bayar</string>
    <string name="total">Total Bayar</string>
    <string name="biaya">Biaya</string>
    <string name="idpel">ID Pel</string>
    <string name="name">Nama</string>
    <string name="daya">Daya</string>
    <string name="ok">Ya</string>
    <string name="no">Tidak</string>
    <string name="cancel">Batal</string>
    <string name="failed">Gagal</string>
    <string name="error">Error</string>
    <string name="success">Sukses</string>
    <string name="oops">Ooppss!</string>
    <string name="noCek">Silahkan klik tombol cek terlebih dahulu</string>
    <string name="konfir">Konfirmasi</string>
    <string name="qSend">Kirim penggunaan untuk no KWH %s ?</string>
    <string name="sendwa">Kirim bukti pembayaran ke whatsapp</string>
    <string name="wrongUname">Username harus di isi</string>
    <string name="wrongPass">Password harus di isi</string>
    <string name="doBayar">Melakukan pembayaran</string>
    <string name="wait">Silahkan tunggu ...</string>
    <string name="blist">Pilih bluetooth</string>
    <string name="bSah">PLN Menyatakan struk ini sebagai bukti pembayaran yang sah</string>
    <string name="admin">Admin</string>
    <string name="thanks">Terimakasih</string>
    <string name="tglBayar">Tanggal Bayar</string>
    <string name="tagihah">Tagihan</string>
    <string name="denda">Denda</string>
    <string name="tStruk">STRUK BUKTI PEMBAYARAN</string>
    <string name="nStruk">TAGIHAN PLN\n</string>
    <string name="bConnect">Mengkoneksikan...</string>
    <string name="cFailed">Gagal koneksi ke Bluetooth</string>
    <string name="noPrinter">Atur printer terlebih dahulu</string>
    <string name="cetakS">\n\nCetak struk ?</string>
    <string name="hItem">Nama: %s\nJumlah Bayar:  %s</string>
    <string name="hsearchHint">Masukkan nama / id pelanggan</string>
    <string name="withAdmin">Termasuk admin</string>
    <string name="withDenda">termasuk denda</string>
    <string name="cDelete">Yakin akan menghapus histori terpilih ?</string>
    <string name="uname">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="adress">Alamat</string>
    <string name="logout">Keluar</string>
    <string name="delAccount">Hapus Akun</string>
    <string name="cPassword">Ganti Kata Sandi</string>
    <string name="konfLogout">Tindakan ini akan menhapus semua pengaturan.\n\nYakin akan keluar ?</string>
    <string name="nohp">Nomor Ponsel</string>
    <string name="lPassword">Sandi Lama</string>
    <string name="nPassword">Sandi Baru</string>
    <string name="send">Kirim</string>
    <string name="cPass">Ganti Kata Sandi</string>
    <string name="notEmpty">Semua data harus di isi</string>
    <string name="imguploadsuccess">Berhasil mengupload gambar</string>
    <string name="errDelete">Gagal menghapus data sebelumnya</string>
    <string name="linKWH">Masukkan KWH sekarang</string>
    <string name="lNOMeter">Masukan Nomor KWH</string>
    <string name="sFile">Ambil gambar</string>
    <string name="sData">Kirim data</string>
    <string name="needperm">Semua izin dibutuhkan</string>
    <string name="imageKWH">Foto KWH</string>
    <string name="btnDF">Silahkan pilih tanggal</string>
    <string name="fRequired">Isian %s diperlukan</string>

</resources>
