<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pln"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/pln"
                android:maxWidth="50dp"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btnDF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:onClick="onClick"
            android:background="@drawable/btn_bg"
            android:text="@string/btnDF"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="@dimen/lsize"
            android:layout_marginBottom="5dp"
            android:text="@string/lNOMeter"/>

        <EditText
            android:id="@+id/txtnokwh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txtbg1"
            android:padding="10dp"
            android:textSize="@dimen/textSize1"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="@dimen/lsize"
            android:layout_marginBottom="5dp"
            android:text="@string/linKWH"/>

        <EditText
            android:id="@+id/txtkwh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txtbg1"
            android:padding="10dp"
            android:textSize="@dimen/textSize1"
            android:ems="10"
            android:inputType="phone" />

        <Button
            android:id="@+id/takepic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:background="@drawable/btn_bg"
            android:text="@string/sFile"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:onClick="onClick"
            android:text="@string/sData"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            android:textSize="@dimen/lsize"
            android:layout_marginBottom="5dp"
            android:text="@string/imageKWH"/>

        <ImageView
            android:id="@+id/imgbukti"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:maxWidth="50dp"/>

    </LinearLayout>
</ScrollView>