<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/containerP"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pcmargin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pcpadding">

                <ImageView
                    android:id="@+id/imgP"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@mipmap/back_login"/>
                <EditText
                    android:id="@+id/pName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobg"
                    android:layout_toEndOf="@id/imgP"
                    android:layout_centerVertical="true"
                    android:drawableEnd="@drawable/edit_img"
                    android:padding="5dp"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pcmargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pcpadding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uname"/>
                <EditText
                    android:id="@+id/pUname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobg"
                    android:drawableEnd="@drawable/edit_img"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pcmargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pcpadding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nohp"/>
                <EditText
                    android:id="@+id/pNoHP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:background="@drawable/nobg"
                    android:drawableEnd="@drawable/edit_img"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pcmargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pcpadding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>
                <EditText
                    android:id="@+id/pEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobg"
                    android:drawableEnd="@drawable/edit_img"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pcmargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pcpadding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adress"/>
                <EditText
                    android:id="@+id/pAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobg"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:gravity="top"
                    android:drawableEnd="@drawable/edit_img"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginBottom="@dimen/btnMargin"
            android:onClick="onClick"
            android:text="@string/cPassword"/>
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btnMargin"
            android:background="@drawable/btn_bg"
            android:textColor="@color/red"
            android:onClick="onClick"
            android:text="@string/logout"/>
        <Button
            android:id="@+id/btnDelAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:textColor="@color/red"
            android:onClick="onClick"
            android:text="@string/delAccount"/>

    </LinearLayout>
</ScrollView>